--- a/simplePeriodic/Makefile
+++ b/simplePeriodic/Makefile
@@ -1,7 +1,6 @@
 #######################################################
 #
-#    C++-kurs, laboration 1, test
-#    -------------------------------------------
+#   simple periodic test program 
 #
 #######################################################
 
